[package]
name = "sky-sl-cli"
version = "0.1.0"
authors = ["Andreas Fischer <opensource@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sky-sl"
path = "./src/main.rs"

[dependencies]
sky-sl = { path = "../sky-sl" }
structopt = "0.3"
