[package]
name = "sky-sl-language-server"
version = "0.1.0"
authors = ["Andreas Fischer <opensource@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sky-sl = { path = "../sky-sl" }
tower-lsp = "0.14"
tokio = { version = "1.6", features = ["full"]}
serde = "1.0"
serde_json = "1.0"
camino = "1.0"
dashmap = "4.0"
