[package]
name = "sky-sl"
version = "0.1.0"
authors = ["Andreas Fischer <opensource@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2"
text-size = "1.1"
rowan = "0.12"
camino = "1.0"
salsa = "0.16"
thiserror = "1.0"
naga = "0.5"
toml = "0.5"
serde = "1"
